hphp/test/zend/bad/ext/session/tests/bug51338.php
<?php
session_start();
print_r(ob_list_handlers());